# aioli

./: .clang-format  CMakeLists.txt  LICENSE  README.md  vcpkg-configuration.json
src/: CMakeLists.txt
src/cpp/: base.cpp  base_net.cpp  event_poller_base.cpp  net_address.cpp
src/cpp/event_pollers/: base.cpp  event_poller_base.cpp  event_poller_select.cpp  select.cpp
src/cpp/sockets/: base.cpp  socket_base.cpp
src/include/: base.h  base_net.h
src/include/aioli/: base.h  base_net.h  event_loop.h  events.h  net_address.h  timer.h
src/include/aioli/event_pollers/: base.h  event_poller_base.h  event_poller_select.h  event_poller_types.h  select.h  types.h
src/include/aioli/sockets/: base.h  socket_base.h  socket_types.h
